--- a/geoshop/Components/ProductCollectionViewCell.xib
+++ b/geoshop/Components/ProductCollectionViewCell.xib
@@ -1,21 +1,117 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ProductCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" horizontalHuggingPriority="165" id="gTV-IL-0wX" customClass="ProductCollectionViewCell" customModule="geoshop" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="165" height="248"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="165" height="248"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="aTc-LG-Pi1">
+                        <rect key="frame" x="0.0" y="0.0" width="165" height="248"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UGk-5h-Z8O">
+                                <rect key="frame" x="0.0" y="0.0" width="165" height="132"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="132" id="Vm7-v2-rvp"/>
+                                    <constraint firstAttribute="width" constant="165" id="mdd-zX-jcx"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nx6-lI-wXv">
+                                <rect key="frame" x="0.0" y="132" width="165" height="116"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="KIx-Dq-HQd">
+                                        <rect key="frame" x="10" y="0.0" width="145" height="64.333333333333329"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dried Chillies Dried Chillies Dried Chillies" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M63-SJ-bKh">
+                                                <rect key="frame" x="0.0" y="0.0" width="145" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="GJS-c8-EbO"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="$2.49 / 100 g" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SJc-G2-F4l">
+                                                <rect key="frame" x="0.0" y="50" width="145" height="14.333333333333329"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bH7-zO-Lfq">
+                                        <rect key="frame" x="10" y="82.333333333333343" width="145" height="20.333333333333329"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$4.99" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zgI-JJ-mRR">
+                                                <rect key="frame" x="0.0" y="0.0" width="122" height="20.333333333333332"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="252" verticalHuggingPriority="251" image="cart.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="UX1-yJ-lk4">
+                                                <rect key="frame" x="122" y="1.6666666666666661" width="23" height="18.333333333333336"/>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="KIx-Dq-HQd" firstAttribute="top" secondItem="Nx6-lI-wXv" secondAttribute="top" id="KA7-Lg-QOG"/>
+                                    <constraint firstItem="KIx-Dq-HQd" firstAttribute="leading" secondItem="Nx6-lI-wXv" secondAttribute="leading" constant="10" id="P9L-5J-PZY"/>
+                                    <constraint firstAttribute="trailing" secondItem="bH7-zO-Lfq" secondAttribute="trailing" constant="10" id="PH4-vF-gJc"/>
+                                    <constraint firstItem="bH7-zO-Lfq" firstAttribute="leading" secondItem="Nx6-lI-wXv" secondAttribute="leading" constant="10" id="Xsl-yb-27i"/>
+                                    <constraint firstItem="bH7-zO-Lfq" firstAttribute="top" secondItem="KIx-Dq-HQd" secondAttribute="bottom" constant="18" id="fv3-my-CoH"/>
+                                    <constraint firstAttribute="trailing" secondItem="KIx-Dq-HQd" secondAttribute="trailing" constant="10" id="sCM-2r-qOL"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Nx6-lI-wXv" secondAttribute="trailing" id="5E7-OP-5Zm"/>
+                            <constraint firstItem="Nx6-lI-wXv" firstAttribute="leading" secondItem="aTc-LG-Pi1" secondAttribute="leading" id="edc-1F-1JX"/>
+                            <constraint firstAttribute="bottom" secondItem="Nx6-lI-wXv" secondAttribute="bottom" id="iK8-ah-aJy"/>
+                            <constraint firstItem="Nx6-lI-wXv" firstAttribute="top" secondItem="UGk-5h-Z8O" secondAttribute="bottom" id="w9K-I7-gu1"/>
+                        </constraints>
+                    </stackView>
+                </subviews>
             </view>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <viewLayoutGuide key="safeArea" id="WCr-cL-ukP"/>
+            <color key="backgroundColor" name="Background1"/>
+            <constraints>
+                <constraint firstItem="aTc-LG-Pi1" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="AHO-xs-EA2"/>
+                <constraint firstAttribute="bottom" secondItem="aTc-LG-Pi1" secondAttribute="bottom" id="Yn3-Sl-saH"/>
+                <constraint firstItem="aTc-LG-Pi1" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="psF-a1-h9P"/>
+            </constraints>
+            <size key="customSize" width="158" height="248"/>
+            <connections>
+                <outlet property="productImage" destination="UGk-5h-Z8O" id="lwZ-0X-OGU"/>
+                <outlet property="productName" destination="M63-SJ-bKh" id="2W6-Up-jA4"/>
+                <outlet property="productPrice" destination="zgI-JJ-mRR" id="j4F-4j-RAr"/>
+                <outlet property="productShortDescription" destination="SJc-G2-F4l" id="0Pw-mP-UnQ"/>
+            </connections>
+            <point key="canvasLocation" x="154.96183206106869" y="-33.802816901408455"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="cart.fill" catalog="system" width="128" height="102"/>
+        <namedColor name="Background1">
+            <color red="0.97647058823529409" green="0.96078431372549022" blue="0.99215686274509807" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
